--- a/.github/workflows/ios_manual_deploy.yml
+++ b/.github/workflows/ios_manual_deploy.yml
@@ -14,23 +14,32 @@ jobs:
     timeout-minutes: 60
 
     env:
+      # --- Required secrets (GitHub repo secrets) ---
       APPLE_ID: ${{ secrets.APPLE_ID }}
       APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
       APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
 
+      # App Store Connect API key (.p8) as BASE64 (single-line)
       APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
       APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }}
       APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
 
+      # Distribution cert (.p12) as BASE64 (single-line) and password
       IOS_DIST_CERT_BASE64: ${{ secrets.IOS_DIST_CERT_BASE64 }}
       IOS_DIST_CERT_PASSWORD: ${{ secrets.IOS_DIST_CERT_PASSWORD }}
 
+      # Provisioning profile (.mobileprovision) as BASE64 (single-line)
       IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
+
+      # Keychain password (recommended to set)
       KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
 
+      # --- Build config ---
       XCODE_WORKSPACE: ios/JunoNative.xcworkspace
       XCODE_SCHEME: JunoNative
       CONFIGURATION: Release
+
+      # Node
       NODE_VERSION: "22"
 
     steps:
@@ -48,8 +57,10 @@ jobs:
           echo "ASC_DIR=$RUNNER_TEMP/asc" >> "$GITHUB_ENV"
           echo "ASC_API_KEY_JSON=$RUNNER_TEMP/api_key.json" >> "$GITHUB_ENV"
           echo "PROFILE_PLIST=$RUNNER_TEMP/profile.plist" >> "$GITHUB_ENV"
+          echo "LOG_DIR=$RUNNER_TEMP/logs" >> "$GITHUB_ENV"
+          mkdir -p "$RUNNER_TEMP/logs"
 
-      - name: 🧠 Detect JS package manager (Option B)
+      - name: 🧠 Detect JS package manager
         id: pm
         shell: bash
         run: |
@@ -61,7 +72,7 @@ jobs:
           elif [ -f "pnpm-lock.yaml" ]; then
             echo "manager=pnpm" >> "$GITHUB_OUTPUT"
           else
-            echo "manager=yarn" >> "$GITHUB_OUTPUT"
+            echo "manager=npm" >> "$GITHUB_OUTPUT"
           fi
 
       - name: 🟩 Setup Node
@@ -69,44 +80,111 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
+      - name: 🧰 Upgrade npm (only when using npm)
+        if: ${{ steps.pm.outputs.manager == 'npm' }}
+        shell: bash
+        run: |
+          set -euo pipefail
+          # Your repo currently warns it needs npm >= 11.4.2. Upgrading avoids random install failures.
+          npm --version
+          npm i -g npm@11.4.2
+          npm --version
+
       - name: 📦 Install JS deps (lockfile-aware)
         shell: bash
         run: |
           set -euo pipefail
           corepack enable || true
+
           case "${{ steps.pm.outputs.manager }}" in
             yarn)
-              if [ -f "yarn.lock" ]; then yarn install --frozen-lockfile; else yarn install; fi
+              echo "Using Yarn..."
+              yarn --version
+              if [ -f "yarn.lock" ]; then
+                yarn install --frozen-lockfile
+              else
+                echo "⚠️ No yarn.lock found; running non-frozen install."
+                yarn install
+              fi
               ;;
             npm)
-              if [ -f "package-lock.json" ]; then npm ci; else npm install; fi
+              echo "Using npm..."
+              node --version
+              npm --version
+              if [ -f "package-lock.json" ]; then
+                npm ci
+              else
+                npm install
+              fi
               ;;
             pnpm)
+              echo "Using pnpm..."
               pnpm --version || corepack prepare pnpm@latest --activate
-              if [ -f "pnpm-lock.yaml" ]; then pnpm install --frozen-lockfile; else pnpm install; fi
+              if [ -f "pnpm-lock.yaml" ]; then
+                pnpm install --frozen-lockfile
+              else
+                pnpm install
+              fi
+              ;;
+            *)
+              echo "Unknown package manager selection."
+              exit 1
               ;;
           esac
+
+      - name: 💎 Detect Ruby strategy (Bundler vs gem install)
+        id: ruby
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ -f "Gemfile" ]; then
+            echo "use_bundler=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "use_bundler=false" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: 💎 Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.2"
-          bundler-cache: false
+          bundler-cache: ${{ steps.ruby.outputs.use_bundler == 'true' }}
 
-      - name: 💎 Install fastlane/cocoapods/xcpretty
+      - name: 💎 Install fastlane/cocoapods/xcpretty (no Gemfile)
+        if: ${{ steps.ruby.outputs.use_bundler != 'true' }}
         shell: bash
         run: |
           set -euo pipefail
-          gem install fastlane cocoapods xcpretty -N
+          gem install fastlane -N
+          gem install cocoapods -N
+          gem install xcpretty -N
+
+          # Make gem executables visible to later steps (fixes: xcpretty: command not found)
           echo "$(ruby -e 'print Gem.bindir')" >> "$GITHUB_PATH"
-          xcpretty --version || echo "⚠️ xcpretty not found after install!"
+          xcpretty --version || true
+
+      - name: 💎 Ensure xcpretty pipe command
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
+            # Use the version pinned in Gemfile.lock if present.
+            echo "XCPRETTY_PIPE=bundle exec xcpretty" >> "$GITHUB_ENV"
+            bundle exec xcpretty --version || (echo "xcpretty missing from bundle; add it to Gemfile or disable formatting" && exit 1)
+          else
+            echo "XCPRETTY_PIPE=xcpretty" >> "$GITHUB_ENV"
+            command -v xcpretty >/dev/null 2>&1 || (echo "xcpretty not on PATH" && exit 1)
+          fi
 
       - name: 🧰 Install CocoaPods
         shell: bash
         run: |
           set -euo pipefail
           cd ios
-          pod install --repo-update
+          if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
+            bundle exec pod install --repo-update
+          else
+            pod install --repo-update
+          fi
 
       - name: 🔐 Create temporary keychain
         shell: bash
@@ -114,83 +192,176 @@ jobs:
           set -euo pipefail
           KEYCHAIN_PATH="$RUNNER_TEMP/ios-build.keychain-db"
           KEYCHAIN_PASSWORD="${KEYCHAIN_PASSWORD:-temp-pass}"
+
           security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+
           security list-keychains -d user -s "$KEYCHAIN_PATH" "$HOME/Library/Keychains/login.keychain-db"
           security default-keychain -s "$KEYCHAIN_PATH"
+
           echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> "$GITHUB_ENV"
           echo "KEYCHAIN_PASSWORD=$KEYCHAIN_PASSWORD" >> "$GITHUB_ENV"
 
-      - name: 🪪 Import signing certificate (p12)
+      - name: 🪪 Import signing certificate (p12) + enable codesign access
         shell: bash
         run: |
           set -euo pipefail
+
+          if [ -z "${IOS_DIST_CERT_BASE64:-}" ]; then
+            echo "IOS_DIST_CERT_BASE64 is empty. Set it in GitHub Secrets."
+            exit 1
+          fi
+          if [ -z "${IOS_DIST_CERT_PASSWORD:-}" ]; then
+            echo "IOS_DIST_CERT_PASSWORD is empty. Set it in GitHub Secrets."
+            exit 1
+          fi
+
           CERT_P12="$RUNNER_TEMP/ios_dist.p12"
-          python3 -c "import base64,os; open('${CERT_P12}','wb').write(base64.b64decode(os.environ['IOS_DIST_CERT_BASE64'].strip()))"
-          security import "$CERT_P12" -k "$KEYCHAIN_PATH" -P "$IOS_DIST_CERT_PASSWORD" \
-            -T /usr/bin/codesign -T /usr/bin/xcodebuild
+          export CERT_P12
+
+          python3 - <<'PY'
+          import os, re, base64, sys
+          s = os.environ.get("IOS_DIST_CERT_BASE64", "")
+          s = re.sub(r"\s+", "", s)
+          try:
+            data = base64.b64decode(s, validate=True)
+          except Exception as e:
+            print("Invalid base64 in IOS_DIST_CERT_BASE64:", e)
+            sys.exit(2)
+          out = os.environ["CERT_P12"]
+          with open(out, "wb") as f:
+            f.write(data)
+          print("p12 bytes:", len(data))
+          if len(data) < 500:
+            print("Decoded .p12 looks suspiciously small (<500 bytes).")
+            sys.exit(3)
+          PY
+
+          security import "$CERT_P12" \
+            -k "$KEYCHAIN_PATH" \
+            -P "$IOS_DIST_CERT_PASSWORD" \
+            -T /usr/bin/codesign \
+            -T /usr/bin/security \
+            -T /usr/bin/xcodebuild \
+            -T /usr/bin/productbuild
+
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+
+          echo "Available signing identities:"
           security find-identity -v -p codesigning "$KEYCHAIN_PATH"
+
+          if ! security find-identity -v -p codesigning "$KEYCHAIN_PATH" | grep -qE "\) "; then
+            echo "No codesigning identity found in keychain after import."
+            exit 1
+          fi
 
       - name: 📄 Decode provisioning profile (IOS_PROFILE_BASE64)
         shell: bash
         run: |
           set -euo pipefail
+
+          if [ -z "${IOS_PROFILE_BASE64:-}" ]; then
+            echo "IOS_PROFILE_BASE64 is empty. Set it in GitHub Secrets."
+            exit 1
+          fi
+
+          PP_DIR="$HOME/Library/MobileDevice/Provisioning Profiles"
+          mkdir -p "$PP_DIR"
+
           PP_FILE="$RUNNER_TEMP/profile.mobileprovision"
-          python3 -c "import base64,os; open('${PP_FILE}','wb').write(base64.b64decode(os.environ['IOS_PROFILE_BASE64'].strip()))"
+          export PP_FILE
+
+          python3 - <<'PY'
+          import os, re, base64, sys
+          s = os.environ.get("IOS_PROFILE_BASE64", "")
+          s = re.sub(r"\s+", "", s)
+          try:
+            data = base64.b64decode(s, validate=True)
+          except Exception as e:
+            print("Invalid base64 in IOS_PROFILE_BASE64:", e)
+            sys.exit(2)
+          out = os.environ["PP_FILE"]
+          with open(out, "wb") as f:
+            f.write(data)
+          print("profile bytes:", len(data))
+          if len(data) < 500:
+            print("Decoded provisioning profile is suspiciously small (<500 bytes).")
+            sys.exit(3)
+          PY
+
           /usr/bin/security cms -D -i "$PP_FILE" > "$PROFILE_PLIST"
+
           UUID=$(/usr/libexec/PlistBuddy -c 'Print:UUID' "$PROFILE_PLIST")
           NAME=$(/usr/libexec/PlistBuddy -c 'Print:Name' "$PROFILE_PLIST")
-          mkdir -p "$HOME/Library/MobileDevice/Provisioning Profiles"
-          cp "$PP_FILE" "$HOME/Library/MobileDevice/Provisioning Profiles/$UUID.mobileprovision"
+
+          cp "$PP_FILE" "$PP_DIR/$UUID.mobileprovision"
+
+          echo "PROFILE_UUID=$UUID" >> "$GITHUB_ENV"
           echo "PROFILE_NAME=$NAME" >> "$GITHUB_ENV"
+          echo "Imported provisioning profile: $NAME ($UUID)"
 
       - name: 🔑 Decode App Store Connect API key (p8)
         shell: bash
         run: |
           set -euo pipefail
+
+          if [ -z "${APP_STORE_CONNECT_API_KEY_BASE64:-}" ]; then
+            echo "APP_STORE_CONNECT_API_KEY_BASE64 is empty. Set it in GitHub Secrets."
+            exit 1
+          fi
+          if [ -z "${APP_STORE_CONNECT_API_KEY_ID:-}" ] || [ -z "${APP_STORE_CONNECT_API_KEY_ISSUER_ID:-}" ]; then
+            echo "APP_STORE_CONNECT_API_KEY_ID / APP_STORE_CONNECT_API_KEY_ISSUER_ID missing."
+            exit 1
+          fi
+
           mkdir -p "$ASC_DIR"
           ASC_P8_PATH="$ASC_DIR/AuthKey_${APP_STORE_CONNECT_API_KEY_ID}.p8"
-          python3 -c "import base64,os; open('${ASC_P8_PATH}','wb').write(base64.b64decode(os.environ['APP_STORE_CONNECT_API_KEY_BASE64'].strip()))"
+          export ASC_P8_PATH
+
+          python3 - <<'PY'
+          import os, re, base64, sys
+          s = os.environ.get("APP_STORE_CONNECT_API_KEY_BASE64", "")
+          s = re.sub(r"\s+", "", s)
+          try:
+            data = base64.b64decode(s, validate=True)
+          except Exception as e:
+            print("Invalid base64 in APP_STORE_CONNECT_API_KEY_BASE64:", e)
+            sys.exit(2)
+          out = os.environ["ASC_P8_PATH"]
+          with open(out, "wb") as f:
+            f.write(data)
+          print("p8 bytes:", len(data))
+          if len(data) < 100:
+            print("Decoded .p8 key is suspiciously small (<100 bytes).")
+            sys.exit(3)
+          PY
+
           chmod 600 "$ASC_P8_PATH"
           echo "ASC_API_KEY_PATH=$ASC_P8_PATH" >> "$GITHUB_ENV"
-
-      - name: 🏗️ Ensure xcpretty available
-        shell: bash
-        run: |
-          set -euo pipefail
-          echo "$(ruby -e 'print Gem.bindir')" >> "$GITHUB_PATH"
-          if ! command -v xcpretty >/dev/null 2>&1; then
-            gem install xcpretty -N
-          fi
 
       - name: 🏗️ Build archive (xcodebuild archive)
         shell: bash
         run: |
           set -euo pipefail
           rm -rf "$ARCHIVE_PATH"
-          if command -v xcpretty >/dev/null 2>&1; then
-            xcodebuild \
-              -workspace "$XCODE_WORKSPACE" \
-              -scheme "$XCODE_SCHEME" \
-              -configuration "$CONFIGURATION" \
-              -sdk iphoneos \
-              -archivePath "$ARCHIVE_PATH" \
-              -destination "generic/platform=iOS" \
-              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
-              archive | xcpretty
-          else
-            xcodebuild \
-              -workspace "$XCODE_WORKSPACE" \
-              -scheme "$XCODE_SCHEME" \
-              -configuration "$CONFIGURATION" \
-              -sdk iphoneos \
-              -archivePath "$ARCHIVE_PATH" \
-              -destination "generic/platform=iOS" \
-              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
-              archive
-          fi
+
+          echo "Xcode version:"
+          xcodebuild -version
+
+          xcodebuild \
+            -workspace "$XCODE_WORKSPACE" \
+            -scheme "$XCODE_SCHEME" \
+            -configuration "$CONFIGURATION" \
+            -sdk iphoneos \
+            -archivePath "$ARCHIVE_PATH" \
+            -destination "generic/platform=iOS" \
+            DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
+            PRODUCT_BUNDLE_IDENTIFIER="$APP_IDENTIFIER" \
+            archive \
+            | tee "$LOG_DIR/xcodebuild_archive.log" \
+            | bash -lc "$XCPRETTY_PIPE"
+
           test -d "$ARCHIVE_PATH"
 
       - name: 🧾 Create ExportOptions.plist (App Store)
@@ -209,58 +380,84 @@ jobs:
             "stripSwiftSymbols": True,
             "compileBitcode": False,
             "teamID": team_id,
-            "provisioningProfiles": {bundle_id: profile_name}
+            "provisioningProfiles": { bundle_id: profile_name },
           }
           with open(os.environ["EXPORT_OPTIONS_PLIST"], "wb") as f:
             plistlib.dump(data, f)
           PY
-          plutil -lint "$EXPORT_OPTIONS_PLIST"
+          /usr/bin/plutil -lint "$EXPORT_OPTIONS_PLIST"
 
       - name: 📤 Export IPA (xcodebuild -exportArchive)
         shell: bash
         run: |
           set -euo pipefail
-          rm -rf "$EXPORT_DIR"; mkdir -p "$EXPORT_DIR"
-          if command -v xcpretty >/dev/null 2>&1; then
-            xcodebuild \
-              -exportArchive \
-              -archivePath "$ARCHIVE_PATH" \
-              -exportPath "$EXPORT_DIR" \
-              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" | xcpretty
-          else
-            xcodebuild \
-              -exportArchive \
-              -archivePath "$ARCHIVE_PATH" \
-              -exportPath "$EXPORT_DIR" \
-              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST"
-          fi
-          ls -la "$EXPORT_DIR"
-          test -n "$(find "$EXPORT_DIR" -maxdepth 1 -name '*.ipa' -print -quit)"
+          rm -rf "$EXPORT_DIR"
+          mkdir -p "$EXPORT_DIR"
 
-      - name: 🚀 Upload to TestFlight
+          xcodebuild \
+            -exportArchive \
+            -archivePath "$ARCHIVE_PATH" \
+            -exportPath "$EXPORT_DIR" \
+            -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" \
+            | tee "$LOG_DIR/xcodebuild_export.log" \
+            | bash -lc "$XCPRETTY_PIPE"
+
+          ls -la "$EXPORT_DIR"
+          IPA_PATH="$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" -print -quit)"
+          if [ -z "$IPA_PATH" ]; then
+            echo "No .ipa found in $EXPORT_DIR"
+            exit 1
+          fi
+          echo "IPA_PATH=$IPA_PATH" >> "$GITHUB_ENV"
+
+      - name: 🚀 Upload to TestFlight (fastlane pilot)
         shell: bash
         env:
           RELEASE_NOTES: ${{ inputs.release_notes }}
         run: |
           set -euo pipefail
-          IPA_PATH=$(find "$EXPORT_DIR" -maxdepth 1 -name '*.ipa' | head -n 1)
+
           python3 - <<'PY'
           import os, json
-          key_path = os.environ["ASC_API_KEY_PATH"]
-          key = open(key_path).read()
+          with open(os.environ["ASC_API_KEY_PATH"], "r", encoding="utf-8") as f:
+            key = f.read()
           payload = {
             "key_id": os.environ["APP_STORE_CONNECT_API_KEY_ID"],
             "issuer_id": os.environ["APP_STORE_CONNECT_API_KEY_ISSUER_ID"],
             "key": key,
             "in_house": False
           }
-          json.dump(payload, open(os.environ["ASC_API_KEY_JSON"], "w"))
+          with open(os.environ["ASC_API_KEY_JSON"], "w", encoding="utf-8") as f:
+            json.dump(payload, f)
           PY
-          fastlane pilot upload \
-            --api_key_path "$ASC_API_KEY_JSON" \
-            --ipa "$IPA_PATH" \
-            --skip_waiting_for_build_processing true \
-            --changelog "$RELEASE_NOTES"
+
+          if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
+            bundle exec fastlane pilot upload \
+              --api_key_path "$ASC_API_KEY_JSON" \
+              --ipa "$IPA_PATH" \
+              --skip_waiting_for_build_processing true \
+              --changelog "$RELEASE_NOTES"
+          else
+            fastlane pilot upload \
+              --api_key_path "$ASC_API_KEY_JSON" \
+              --ipa "$IPA_PATH" \
+              --skip_waiting_for_build_processing true \
+              --changelog "$RELEASE_NOTES"
+          fi
+
+      - name: 📎 Upload build artifacts (includes IPA)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: ios-build-artifacts
+          path: |
+            ${{ env.IPA_PATH }}
+            ${{ env.EXPORT_OPTIONS_PLIST }}
+            ${{ env.PROFILE_PLIST }}
+            ${{ env.ARCHIVE_INFO_PLIST }}
+            ${{ env.LOG_DIR }}
+            ${{ env.EXPORT_DIR }}
+            ${{ env.ARCHIVE_PATH }}
 
       - name: 🧹 Cleanup keychain
         if: always()
