--- a/.github/workflows/ios_manual_deploy.yml
+++ b/.github/workflows/ios_manual_deploy.yml
@@ -16,7 +16,7 @@ jobs:
     env:
       # --- Required secrets (GitHub repo secrets) ---
       APPLE_ID: ${{ secrets.APPLE_ID }}
-      APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
+      APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }} # bundle id, e.g. com.yourcompany.app
       APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
 
       # App Store Connect API key (.p8) as BASE64 (single-line)
@@ -31,7 +31,7 @@ jobs:
       # Provisioning profile (.mobileprovision) as BASE64 (single-line)
       IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
 
-      # Keychain password (recommended to set)
+      # Keychain password (can be empty but better set)
       KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
 
       # --- Build config ---
@@ -57,10 +57,9 @@ jobs:
           echo "ASC_DIR=$RUNNER_TEMP/asc" >> "$GITHUB_ENV"
           echo "ASC_API_KEY_JSON=$RUNNER_TEMP/api_key.json" >> "$GITHUB_ENV"
           echo "PROFILE_PLIST=$RUNNER_TEMP/profile.plist" >> "$GITHUB_ENV"
-          echo "LOG_DIR=$RUNNER_TEMP/logs" >> "$GITHUB_ENV"
-          mkdir -p "$RUNNER_TEMP/logs"
+          echo "XCODEBUILD_LOG=$RUNNER_TEMP/xcodebuild.log" >> "$GITHUB_ENV"
 
-      - name: 🧠 Detect JS package manager
+      - name: 🧠 Detect JS package manager (Option B)
         id: pm
         shell: bash
         run: |
@@ -72,23 +71,14 @@ jobs:
           elif [ -f "pnpm-lock.yaml" ]; then
             echo "manager=pnpm" >> "$GITHUB_OUTPUT"
           else
-            echo "manager=npm" >> "$GITHUB_OUTPUT"
+            echo "manager=yarn" >> "$GITHUB_OUTPUT"
           fi
 
       - name: 🟩 Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-
-      - name: 🧰 Upgrade npm (only when using npm)
-        if: ${{ steps.pm.outputs.manager == 'npm' }}
-        shell: bash
-        run: |
-          set -euo pipefail
-          # Your repo currently warns it needs npm >= 11.4.2. Upgrading avoids random install failures.
-          npm --version
-          npm i -g npm@11.4.2
-          npm --version
+          # IMPORTANT: do not enable cache here unless a lockfile definitely exists (setup-node hard-fails otherwise)
 
       - name: 📦 Install JS deps (lockfile-aware)
         shell: bash
@@ -143,11 +133,18 @@ jobs:
             echo "use_bundler=false" >> "$GITHUB_OUTPUT"
           fi
 
-      - name: 💎 Setup Ruby
+      - name: 💎 Setup Ruby (Bundler cache)
+        if: ${{ steps.ruby.outputs.use_bundler == 'true' }}
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.2"
-          bundler-cache: ${{ steps.ruby.outputs.use_bundler == 'true' }}
+          bundler-cache: true
+
+      - name: 💎 Setup Ruby (no Gemfile)
+        if: ${{ steps.ruby.outputs.use_bundler != 'true' }}
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.2"
 
       - name: 💎 Install fastlane/cocoapods/xcpretty (no Gemfile)
         if: ${{ steps.ruby.outputs.use_bundler != 'true' }}
@@ -158,23 +155,6 @@ jobs:
           gem install cocoapods -N
           gem install xcpretty -N
 
-          # Make gem executables visible to later steps (fixes: xcpretty: command not found)
-          echo "$(ruby -e 'print Gem.bindir')" >> "$GITHUB_PATH"
-          xcpretty --version || true
-
-      - name: 💎 Ensure xcpretty pipe command
-        shell: bash
-        run: |
-          set -euo pipefail
-          if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
-            # Use the version pinned in Gemfile.lock if present.
-            echo "XCPRETTY_PIPE=bundle exec xcpretty" >> "$GITHUB_ENV"
-            bundle exec xcpretty --version || (echo "xcpretty missing from bundle; add it to Gemfile or disable formatting" && exit 1)
-          else
-            echo "XCPRETTY_PIPE=xcpretty" >> "$GITHUB_ENV"
-            command -v xcpretty >/dev/null 2>&1 || (echo "xcpretty not on PATH" && exit 1)
-          fi
-
       - name: 🧰 Install CocoaPods
         shell: bash
         run: |
@@ -184,6 +164,30 @@ jobs:
             bundle exec pod install --repo-update
           else
             pod install --repo-update
+          fi
+
+      - name: 🧾 Ensure xcpretty exists (fixes: xcpretty: command not found)
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
+            if bundle exec ruby -S xcpretty --version >/dev/null 2>&1; then
+              echo "XCPRETTY_CMD=bundle exec xcpretty" >> "$GITHUB_ENV"
+              bundle exec ruby -S xcpretty --version || true
+              exit 0
+            fi
+            echo "xcpretty not present in Gemfile/Gemfile.lock. Add it, or remove the formatting pipe."
+            exit 1
+          else
+            if command -v xcpretty >/dev/null 2>&1; then
+              echo "XCPRETTY_CMD=xcpretty" >> "$GITHUB_ENV"
+              xcpretty --version || true
+              exit 0
+            fi
+            echo "xcpretty missing; installing globally..."
+            gem install xcpretty -N
+            echo "XCPRETTY_CMD=xcpretty" >> "$GITHUB_ENV"
+            xcpretty --version || true
           fi
 
       - name: 🔐 Create temporary keychain
@@ -234,7 +238,7 @@ jobs:
             f.write(data)
           print("p12 bytes:", len(data))
           if len(data) < 500:
-            print("Decoded .p12 looks suspiciously small (<500 bytes).")
+            print("Decoded p12 is suspiciously small (<500 bytes).")
             sys.exit(3)
           PY
 
@@ -250,11 +254,6 @@ jobs:
 
           echo "Available signing identities:"
           security find-identity -v -p codesigning "$KEYCHAIN_PATH"
-
-          if ! security find-identity -v -p codesigning "$KEYCHAIN_PATH" | grep -qE "\) "; then
-            echo "No codesigning identity found in keychain after import."
-            exit 1
-          fi
 
       - name: 📄 Decode provisioning profile (IOS_PROFILE_BASE64)
         shell: bash
@@ -345,24 +344,43 @@ jobs:
         run: |
           set -euo pipefail
           rm -rf "$ARCHIVE_PATH"
+          rm -f "$XCODEBUILD_LOG"
 
-          echo "Xcode version:"
-          xcodebuild -version
+          # Avoid failing the job due to downstream formatter "broken pipe".
+          if [ -n "${XCPRETTY_CMD:-}" ]; then
+            set +o pipefail
+            xcodebuild \
+              -workspace "$XCODE_WORKSPACE" \
+              -scheme "$XCODE_SCHEME" \
+              -configuration "$CONFIGURATION" \
+              -sdk iphoneos \
+              -archivePath "$ARCHIVE_PATH" \
+              -destination "generic/platform=iOS" \
+              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
+              PRODUCT_BUNDLE_IDENTIFIER="$APP_IDENTIFIER" \
+              archive 2>&1 | tee "$XCODEBUILD_LOG" | $XCPRETTY_CMD
+            XC=${PIPESTATUS[0]}
+            set -o pipefail
+            exit $XC
+          else
+            xcodebuild \
+              -workspace "$XCODE_WORKSPACE" \
+              -scheme "$XCODE_SCHEME" \
+              -configuration "$CONFIGURATION" \
+              -sdk iphoneos \
+              -archivePath "$ARCHIVE_PATH" \
+              -destination "generic/platform=iOS" \
+              DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
+              PRODUCT_BUNDLE_IDENTIFIER="$APP_IDENTIFIER" \
+              archive 2>&1 | tee "$XCODEBUILD_LOG"
+          fi
 
-          xcodebuild \
-            -workspace "$XCODE_WORKSPACE" \
-            -scheme "$XCODE_SCHEME" \
-            -configuration "$CONFIGURATION" \
-            -sdk iphoneos \
-            -archivePath "$ARCHIVE_PATH" \
-            -destination "generic/platform=iOS" \
-            DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
-            PRODUCT_BUNDLE_IDENTIFIER="$APP_IDENTIFIER" \
-            archive \
-            | tee "$LOG_DIR/xcodebuild_archive.log" \
-            | bash -lc "$XCPRETTY_PIPE"
-
+      - name: 🧾 Verify archive exists
+        shell: bash
+        run: |
+          set -euo pipefail
           test -d "$ARCHIVE_PATH"
+          test -f "$ARCHIVE_INFO_PLIST" || true
 
       - name: 🧾 Create ExportOptions.plist (App Store)
         shell: bash
@@ -394,21 +412,26 @@ jobs:
           rm -rf "$EXPORT_DIR"
           mkdir -p "$EXPORT_DIR"
 
-          xcodebuild \
-            -exportArchive \
-            -archivePath "$ARCHIVE_PATH" \
-            -exportPath "$EXPORT_DIR" \
-            -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" \
-            | tee "$LOG_DIR/xcodebuild_export.log" \
-            | bash -lc "$XCPRETTY_PIPE"
+          if [ -n "${XCPRETTY_CMD:-}" ]; then
+            set +o pipefail
+            xcodebuild \
+              -exportArchive \
+              -archivePath "$ARCHIVE_PATH" \
+              -exportPath "$EXPORT_DIR" \
+              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | $XCPRETTY_CMD
+            XC=${PIPESTATUS[0]}
+            set -o pipefail
+            exit $XC
+          else
+            xcodebuild \
+              -exportArchive \
+              -archivePath "$ARCHIVE_PATH" \
+              -exportPath "$EXPORT_DIR" \
+              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST"
+          fi
 
           ls -la "$EXPORT_DIR"
-          IPA_PATH="$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" -print -quit)"
-          if [ -z "$IPA_PATH" ]; then
-            echo "No .ipa found in $EXPORT_DIR"
-            exit 1
-          fi
-          echo "IPA_PATH=$IPA_PATH" >> "$GITHUB_ENV"
+          test -n "$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" -print -quit)"
 
       - name: 🚀 Upload to TestFlight (fastlane pilot)
         shell: bash
@@ -416,6 +439,8 @@ jobs:
           RELEASE_NOTES: ${{ inputs.release_notes }}
         run: |
           set -euo pipefail
+
+          IPA_PATH=$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" | head -n 1)
 
           python3 - <<'PY'
           import os, json
@@ -445,19 +470,18 @@ jobs:
               --changelog "$RELEASE_NOTES"
           fi
 
-      - name: 📎 Upload build artifacts (includes IPA)
+      - name: 📎 Upload build artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: ios-build-artifacts
           path: |
-            ${{ env.IPA_PATH }}
             ${{ env.EXPORT_OPTIONS_PLIST }}
             ${{ env.PROFILE_PLIST }}
+            ${{ env.XCODEBUILD_LOG }}
             ${{ env.ARCHIVE_INFO_PLIST }}
-            ${{ env.LOG_DIR }}
-            ${{ env.EXPORT_DIR }}
             ${{ env.ARCHIVE_PATH }}
+            ${{ env.EXPORT_DIR }}
 
       - name: 🧹 Cleanup keychain
         if: always()
